Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110762

Intel Skylake embedded target fails yocto build for Qt3D

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.4.3
    • 6.4
    • Qt3D
    • None
    • Linux/Yocto
    • e47931cfa (6.4.3)

      With latest Qt 6.4 branch content Intel Skylake fails Boot2Qt build with following error for qt3d module:

      00:28:39 | /usr/src/debug/qt3d/6.4.3-r0/build/include/Qt3DCore/6.4.3/Qt3DCore/private/../../../../../../git/src/core/resources/qresourcemanager_p.h:269: error: undefined reference to 'Qt3DCore::AlignedAllocator::allocate(unsigned int)'

      00:28:39 | /usr/src/debug/qt3d/6.4.3-r0/build/include/Qt3DCore/6.4.3/Qt3DCore/private/../../../../../../git/src/core/resources/qresourcemanager_p.h:291: error: undefined reference to 'Qt3DCore::AlignedAllocator::release(void*)'

      00:28:39 | collect2: error: ld returned 1 exit status

      The only change in qt3d module besides dependency update one compared to successful build is commit "6bfc66ecf82975664052fdcb5754f3579ede1f54 Qt3DCore: update AVX2 code to mean x86-64-v3".

      A test build with all the latest qt dev branch content for Skylake went through fine. It looks like the very next commit in qt3d dev branch following the "15e4fc5daeeec5eeb0c1ccb0ce6f76b5b284e2c7 Qt3DCore: update AVX2 code to mean x86-64-v3" is

      "00cb8afafb2867b348aa529c0702252d12d1b4d6 3DCore: rip away the configure option and static choice of SIMD" which fixes the build. A Cherry-pick to 6.4 does not apply cleanly, thus needs some work.

        For Gerrit Dashboard: QTBUG-110762
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes