src/core/transforms/matrix4x4_p.h
@@ -16,20 +16,9 @@
 //
 
 #include <private/qsimd_p.h>
-#include <Qt3DCore/private/qt3dcore-config_p.h>
 
-
-// We check if sse or avx config option was enabled as it could
-// be disabled even though a given platform supports SSE2 or AVX2 instructions
-#if QT_CONFIG(qt3d_simd_avx2) && defined(__AVX2__) && defined(QT_COMPILER_SUPPORTS_AVX2)
-
-#include <Qt3DCore/private/matrix4x4_avx2_p.h>
-
-QT_BEGIN_NAMESPACE
-using Matrix4x4 = Qt3DCore::Matrix4x4_AVX2;
-QT_END_NAMESPACE
-
-#elif QT_CONFIG(qt3d_simd_sse2) && defined(__SSE2__) && defined(QT_COMPILER_SUPPORTS_SSE2)
+// Check if we can use the optimized version of QMatrix4x4
+#if defined(__SSE2__)
 
 #include <Qt3DCore/private/matrix4x4_sse_p.h>
 
